refactor: remove custom page extensions

--- a/src/pages/about/service.mdx
+++ b/src/pages/about/service.mdx
@@ -29,11 +29,11 @@ The SSH Open Marketplace is _not_:
 - a commercial Marketplace. There is nothing to sell in the SSH Open Marketplace. Commercial
   software/services can be referenced.
 
-## What does the SSH Open Marketplace have to offer you? 
+## What does the SSH Open Marketplace have to offer you?
 
 Watch the “SSH Open Marketplace - explained the easy way” to understand what the service has to offer!
 
-<iframe src="https://www.youtube-nocookie.com/embed/4tyZ4vhrM9s" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowFullScreen width="100%" style={{ aspectRatio: '16 / 9' }} />
+<iframe src="https://www.youtube-nocookie.com/embed/4tyZ4vhrM9s" frameBorder="0" allow="encrypted-media; picture-in-picture; web-share" allowFullScreen width="100%" style={{ aspectRatio: '16 / 9' }} />
 
 ## How to use it?
 
