fix: convert div in mdx to grid layout widget

--- a/content/about/team/index.mdx
+++ b/content/about/team/index.mdx
@@ -4,15 +4,22 @@ toc: false
 ---
 The SSH Open Marketplace was created with funding from the [SSHOC project](/about/sshoc-eosc). After the end of the project, 3 ERICs and some of their national nodes decided to ensure the sustainability of the SSH Open Marketplace, under the umbrella of the SSH Open Cluster. They act as a **Governing Board** for the SSH Open Marketplace and define the Marketplace strategic policy with regards to scientific, technical and managerial matters.
 
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'repeat(3, 1fr)' }}>
 
+<Grid layout="three-columns">
+
+<GridItem>
 [![DARIAH](/assets/cms/images/dariah-eu-logo.png)](https://dariah.eu)
+</GridItem>
 
+<GridItem>
 [![CESSDA](/assets/cms/images/cessda-logo.png)](https://www.cessda.eu)
+</GridItem>
 
+<GridItem>
 [![CLARIN](/assets/cms/images/clarin-logo.png)](https://clarin.eu)
+</GridItem>
 
-</div>
+</Grid>
 
 Two institutions act as service providers on behalf of these ERICs:
 
@@ -25,85 +32,144 @@ An **Editorial Team** ensures the day-to-day maintenance and the data quality of
 
 The Editorial Team is composed of the following members (8 members appointed by the Governing Board and volunteers who joined the team after a call launched mid-2022):
 
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-sm) 1fr' }}>
+<Grid layout="one-four-columns">
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_canan_arikancaba.png">
 </Avatar>
+</GridItem>
 
+<GridItem>
 Canan Arıkan-Caba is a Research Infrastructure Officer in the Research Unit [DH Research & Infrastructure](https://www.oeaw.ac.at/acdh/research/dh-research-infrastructure) at the Austrian Center for Digital Humanities and Cultural Heritage and a Phd candidate in Byzantine and Modern Greek Studies at the University of Vienna. Canan joined the SSH Open Marketplace Editorial Board in 2024 and is part also of the curation team, where she works on enhancing the metadata quality of the items. Furthermore, she is involved in the project [ATRIUM](https://atrium-research.eu/) (Advancing fronTier Research In the arts and hUManities) for which she brings her academic experience in archaeological and textual data and works in semantic interoperability and Metadata Harmonisation and enrichment WPs in which SSH Marketplace has the crucial role as the main discovery platform.
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_laure_barbot.jpg">
 </Avatar>
+</GridItem>
 
+<GridItem>
 Laure Barbot is officer for service development and integration at the Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU). She coordinates the SSH Open Marketplace Editorial Team, and is involved in various EU projects connected to the SSH Open Cluster.
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_elena_battaner_moro.png">
 </Avatar>
+</GridItem>
 
+<GridItem>
 [Elena Battaner Moro](https://orcid.org/0000-0002-5521-6445) is Professor in Linguistics at the Universidad Rey Juan Carlos in Madrid, Spain. With a strong commitment to Open Science, Elena is also a member of the RDA and CLARIAH-ES (Spain). Joining the SSH Open Marketplace Editorial Team is an opportunity for her to consolidate the vocabularies and taxonomies related to the different subjects and activities of CESSDA, DARIAH and CLARIN, as well as the possibility to contribute to the training and information about research infrastructures.
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_stefan_buddenbohm.jpg">
 </Avatar>
+</GridItem>
 
+<GridItem>
 [Stefan Buddenbohm](https://www.sub.uni-goettingen.de/kontakt/personen-a-z/personendetails/person/stefan-buddenbohm-1/) works as project manager in the Research and Development Department at the Göttingen State and University Library, in Germany. Already involved in the development of the SSH Open Marketplace via the SSHOC project, Stefan joins the Editorial Team with an interest to enhance the uptake and awareness of the SSH Open Marketplace in the German research community. Stefan builds the bridge to the German NFDI - the National Research Data Infrastructure - a joint effort of up to 30 disciplinary consortia. Currently he’s coordinating the task area Infrastructure/Operations of  Text+, the NFDI research data infrastructure for text- and language based research data.
+</GridItem>
 
-<div/>
+<GridItem>
+</GridItem>
 
+<GridItem>
 Cesare Concordia - Institute of Information Science and Technologies "Alessandro Faedo" (CNR-ISTI)
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_maja_dolinar.jpg">
 </Avatar>
+</GridItem>
 
+<GridItem>
 [Maja Dolinar](https://orcid.org/0000-0002-8307-6486) is Head of Digital Preservation at the Slovenian Social Science Data Archives at the University of Ljubljana, in Slovenia. Maja has an extensive expertise in quality evaluation of resources and an everyday experience in metadata and managing social science research data. Motivated to share her experiences, learn from other members of the Board and contribute to improving and disseminating the SSH Open Marketplace resources, Maja will also pay particular attention to the early career researchers’ needs towards the service.
+</GridItem>
 
-<div/>
+<GridItem>
+</GridItem>
 
+<GridItem>
 Edward Gray - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU)
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_cristinagrisot.jpg">
 </Avatar>
+</GridItem>
 
+<GridItem>
 [Cristina Grisot](https://cristinagrisot.com/) is a researcher in Language Sciences and Project Manager, and she currently works as national coordinator of the Swiss nodes of CLARIN and DARIAH at the University of Zurich and at the Swiss National Center for Data & Services for the Humanities DaSCH. As a member of the SSHOM EB, Cristina is interested in contributing to the (meta)data quality of humanities and language-related resources, creation of workflows, as well as dissemination and community building around the SSH Open Marketplace. ORCID [0000-0003-0684-4442](https://orcid.org/0000-0003-0684-4442). [LinkedIn](https://www.linkedin.com/in/cristinagrisot/)
+</GridItem>
 
-<div/>
+<GridItem>
+</GridItem>
 
+<GridItem>
 Klaus Illmayer - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)
+</GridItem>
 
-<div/>
+<GridItem>
+</GridItem>
 
+<GridItem>
 Alexander König - Common Language Resources and Technology Infrastructure (CLARIN ERIC)
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_michael_kurzmeier.png">
 </Avatar>
+</GridItem>
 
+<GridItem>
 [Michael Kurzmeier](https://www.mkrzmr.com/) is Research Infrastructure Officer at the Austrian Centre for Digital Humanities and Cultural Heritage. Michael has been active in the development of research infrastructures through the [WARCnet](https://cc.au.dk/en/warcnet/) research network as well as the [C21: Editing and Publishing in the Digital Age](https://www.c21editions.org/) research project.
 At the ACDH-CH, Michael is part of the research unit [DH Research & Infrastructure](https://www.oeaw.ac.at/acdh/research/dh-research-infrastructure). He is currently working for the EU funded H2020 project [EOSC Future](https://eoscfuture.eu/) building up the European Open Science Cloud. Michael chairs the Working Group on Digital Methods for WARCnet, contributing to methodological developments in digital tools for research. Notably, he has provided a comprehensive database of defaced websites for academic use and serves as the Chair for Community Engagement in Dariah.
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_barbara_mcgillivray.png">
 </Avatar>
+</GridItem>
 
+<GridItem>
 Barbara McGillivray is Lecturer Digital Humanities and Cultural Computation at the Department of Digital Humanities of King's College London and Editor-in-chief of the [Journal of Open Humanities Data (JOHD)](https://openhumanitiesdata.metajnl.com/). Barbara is bringing her expertise in interdisciplinary research at the intersection between humanities and computational sciences, with a particular focus on language data to the SSH Open Marketplace. And great synergies between the Journal of Open Humanities Data and the SSH Open Marketplace will also be on the agenda! [ORCID profile](https://orcid.org/0000-0003-3426-8200)
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_claraboavida.jpg">
 </Avatar>
+</GridItem>
 
+<GridItem>
 [Clara Parente Boavida](https://orcid.org/0000-0002-4837-6395) works at the Research Support Office at Iscte-Instituto Universitário de Lisboa, in Portugal, focusing particularly on open research issues, research data management, data stewardship, post award activities and bibliometric indicator studies. Clara joins the SSH Open Marketplace Editorial Board team to contribute to the enrichment of content and dissemination of the service and is also bringing her experience in reusing training materials provided by Research Infrastructures.
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_christian_schuster.png">
 </Avatar>
+</GridItem>
 
+<GridItem>
 [Christian Schuster](https://orcid.org/0000-0002-5851-5643) is the Director of the Transylvania Digital Humanities Centre (DigiHUBB) at the Babeș-Bolyai University Cluj-Napoca, in Romania. Christian brings his experience in interdisciplinary studies and his expertise in (meta)data curation to the SSH Open Marketplace Editorial Board.
+</GridItem>
 
+<GridItem>
 <Avatar src="/assets/cms/images/sshoc_ed_board_magdalena_wnuk.png">
 </Avatar>
+</GridItem>
 
+<GridItem>
 [Magdalena Wnuk](https://orcid.org/0000-0003-4129-6664) is Open Science Specialist at The Institute of Literary Research of the Polish Academy of Sciences, Digital Humanities Centre. She is also coordinating the Polish national node for the OPERAS infrastructure.  By joining the SSH Open Marketplace Editorial Board, Magdalena would like to continue communicating the available tools among various audiences as well as contributing to metadata quality improvement in social sciences and humanities.
+</GridItem>
 
-<div/>
+<GridItem>
+</GridItem>
 
+<GridItem>
 Irena Vipavc Brvar - CESSDA & Slovenian Social Science Data Archives (ADP), University of Ljubljana
+</GridItem>
 
-</div>
+</Grid>
 
 Former members of the Editorial Board: Mari Kleemola (CESSDA/FSD), Taina Jääskeläinen (CESSDA/FSD), Martin Kirnbauer (ACDH-CH)
 
