--- a/content/contribute/create-an-individual-item/index.mdx
+++ b/content/contribute/create-an-individual-item/index.mdx
@@ -44,60 +44,49 @@ If you answer yes to these first three questions, you are (almost) good to go! T
 
 The first choice you need to make to create an item in the SSH Open Marketplace relates to the type of content you want to add. At the moment, 5 different content types are available:
 
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
+<Grid layout="one-four-columns">
 
+<GridItem>
 ![Tool or service](/assets/images/categories/tool-or-service.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Tools & services**
+</GridItem>
 
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
+<GridItem>
 ![Training Material](/assets/images/categories/training-material.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Training materials**
+</GridItem>
 
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
+<GridItem>
 ![Workflow](/assets/images/categories/workflow.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Workflows**
+</GridItem>
 
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
+<GridItem>
 ![Dataset](/assets/images/categories/dataset.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Datasets**
+</GridItem>
 
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
+<GridItem>
 ![Publication](/assets/images/categories/publication.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Publications**
+</GridItem>
 
-</div>
-</div>
+</Grid>
 
 If you are unsure about which item types you should choose, you can [take a look at our dedicated section](/about/data-population#types-of-content).
 
