--- a/content/about/data-population/index.mdx
+++ b/content/about/data-population/index.mdx
@@ -6,81 +6,70 @@ toc: true
 
 There are 5 main content types on the SSH Open Marketplace, which are considered to be representative for the large array of digital resources that can be found on this discovery platform.
 
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
+<Grid layout="one-four-columns">
 
+<GridItem>
 ![Tool or service](/assets/images/categories/tool-or-service.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Tools & services**
 
 This type of content refers to all sorts of digital services or products, such as software, applications, programs, websites, programming libraries and APIs, that make tasks easier to execute.
 Some of them can be accessed directly in web browsers whereas others have to be installed locally.
 _Examples:_ (1) The _[Gephi](/tool-or-service/87wJWo)_ tool is a visualisation and exploration software for all kinds of graphs and networks. (2) The _[DARIAH-DE Helpdesk (CLARIAH-DE, Text+)](/tool-or-service/riBkMh)_ is a service whose team is familiar with the humanities and cultural science research processes and may likely help you along with questions falling not directly into the services/resources of the mentioned initiatives.
+</GridItem>
 
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
+<GridItem>
 ![Training Material](/assets/images/categories/training-material.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Training materials**
 
 Tutorials, lessons or didactic resources explaining how to perform an action or highlighting the
 potential learning outcomes gained from using that material.
 
 _Examples:_ (1) The lesson _[Cleaning Data with OpenRefine](/training-material/oaQM1D)_ which allows you to learn the principles and practice of data cleaning and how to use the OpenRefine tool. (2) The _[SSHOC Webinar: CLARIN Hands-on Tutorial on Transcribing Interview Data](/training-material/ITNpCC)_ which focuses on the role of automatic speech recognition – what are the opportunities, what are the pitfalls and to where can it be applied successfully.
+</GridItem>
 
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
+<GridItem>
 ![Workflow](/assets/images/categories/workflow.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Workflows**
 
 Sequences of steps that one can perform on research data during their lifecycle. Workflows can be achieved by using diverse tools, resources  and methods, and the useful resources are connected to each step.
 
 _Examples:_ (1) _[Extract textual content from images](/workflow/qYzKVU)_ is a workflow composed of 13 steps coming from the Standardization Survival Kit useful for extracting textual content from images. (2) _[Intertextuality phenomena in European drama history](/workflow/DMJlzG)_ is a workflow composed of 4 steps useful for analysing the relationships between the characters in a drama based on monologue/dialogue.
+</GridItem>
 
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
+<GridItem>
 ![Dataset](/assets/images/categories/dataset.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Datasets**
 
 A dataset is an organised collection of data. It is generally associated with a unique body of work, typically covers one topic at a time and is treated as a single unit by a computer.
 
 _Examples:_ (1) _[Parlamint](/dataset/9LlGMD)_ contains a collection of parliamentary datasets (corpora) in a number of languages and in a harmonized format that are processed linguistically, and indexed with popular concordancers.  (2) _[CoFiF-Corpus for Finance](/dataset/2AWjuo)_ is the first corpus comprising company reports in French; the documents are collected from the 60 largest French companies listed in France’s main stock indices CAC40 and CAC Next 20.
+</GridItem>
 
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
+<GridItem>
 ![Publication](/assets/images/categories/publication.svg)
+</GridItem>
 
-<div>
-
+<GridItem>
 **Publications**
 
 Research results published in academic journals or non-peer-reviewed publication repositories such as Zenodo (our logic being that not all valuable academic production is necessarily in a traditional, peer-reviewed academic journal). The SSH Open Marketplace references **only** publications that can be connected to other resources (i.e. tools and services, training materials, workflows or datasets). As such, the SSH Open Marketplace is not an exhaustive collection of papers.
 
 _Examples:_ (1) _[PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora](/publication/aIYrN0)_ is a conference paper presented during the DH2020 Conference in which you can find an example of use of the SpaCy library (referenced as a tool in the SSH Open Marketplace). (2) _[Music Encoding Initiative Guidelines](/publication/8DmQJ6)_ are intended to serve as a reference tool for music encoders, and are linked to several workflows and related tools in the Marketplace.
+</GridItem>
 
-</div>
-</div>
+</Grid>
 
 ## Inclusion criteria for adding resources: 4 questions to ask
 
@@ -95,8 +84,6 @@ Here is a list of four questions to ask before adding a resource on the SSH Open
 4. The **uniqueness** of the resource The question to ask is: _is the resource already in the Marketplace?_ If yes, there is no need to add it again, either as an individual item or with a source. Even though duplicate entries are dealt with within the Marketplace, ingesting identical (or worse almost identical) entries multiple times uses up valuable human resources that will be better put to use elsewhere considering the limited timeframe and personnel of the project
 
 ## SSH Open Marketplace Core Principles
-
-
 
 1. **Contextualization** is one of the [key pillars of the SSH Open Marketplace](/about/sshoc-eosc#three-pillars-for-the-development-and-functioning-of-the-ssh-open-marketplace). It is meant to provide a discovery portal for tools and services, while placing these tools and services in context via publications, training materials, datasets, and workflows. As such, these last four categories are indexed in the SSH Open Marketplace insofar as they can be placed in relation with tools and services, and if no relation to a tool or service exists, they should not be accepted.
 2. **Curation** is, alongside contextualization, a key pillar of the SSH Open Marketplace. We believe that accurate and up-to-date content is key to making the SSH Open Marketplace a rich and useful discovery portal. As such, data population and curation are at the heart of our work. Once (meta)data have been ingested in the Marketplace, we curate and enrich them thanks to a hybrid approach: automated checks are run on the ingested data, followed by manual review of the identified problems as well as of aspects that cannot be checked automatically. In this process, contributors and moderators are playing an essential role (See “How to contribute”).
@@ -113,93 +100,149 @@ sources** (i.e compliant with the Core Principles defined above) from which to g
 the SSHOC project, 15 sources have been ingested for a total of over 5,000 individual items. The
 sources are listed below.
 
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-sm) 1fr' }}>
+<Grid layout="one-four-columns">
 
+<GridItem>
 ![TAPoR logo](/assets/cms/images/source-tapor-logo.png)
+</GridItem>
 
+<GridItem>
 [TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text analysis and
 retrieval.
+</GridItem>
 
+<GridItem>
 ![Programming Historian logo](/assets/cms/images/programming-historian.svg)
+</GridItem>
 
+<GridItem>
 The [Programming Historian](https://programminghistorian.org/) publishes novice-friendly,
 peer-reviewed tutorials that help humanists learn a wide range of digital tools, techniques, and
 workflows to facilitate research and teaching.
+</GridItem>
 
+<GridItem>
 ![Standardization Survival Kit logo](/assets/cms/images/source-ssk-logo.svg)
+</GridItem>
 
+<GridItem>
 The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a collection of research use
 case scenarios illustrating best practices in Digital Humanities and Heritage research. The SSK website is now archived and all scenarios are directly hosted and visible from the SSH Open Marketplace.
+</GridItem>
 
+<GridItem>
 ![Language Resource Switchboard logo](/assets/cms/images/source-language-resource-switchboard-logo.png)
+</GridItem>
 
+<GridItem>
 The [Language Resource Switchboard](https://switchboard.clarin.eu/) helps you find tools that can
 process your data.
+</GridItem>
 
+<GridItem>
 ![dblp computer science bibliography logo](/assets/cms/images/source-dblp-logo.png)
+</GridItem>
 
+<GridItem>
 The [dblp computer science bibliography](https://dblp.org/) provides open bibliographic information
 on major computer science journals and proceedings. Only a subset of publications related to digital
 humanities is being ingested in the SSH Open Marketplace.
+</GridItem>
 
+<GridItem>
 ![EOSC logo](/assets/cms/images/source-eosc-logo.png)
+</GridItem>
 
+<GridItem>
 The [EOSC Portal catalogue & marketplace](https://marketplace.eosc-portal.eu/) is an integrated
 platform that allows easy access to plenty of services and resources for various research domains
 along with integrated data analytics tools. Only a subset of resources, relevant for Social Sciences
 and Humanities, is being ingested in the SSH Open Marketplace.
+</GridItem>
 
+<GridItem>
 ![Humanities Data](/assets/cms/images/hdata.png)
+</GridItem>
 
+<GridItem>
 The [Humanities Data](https://humanitiesdata.com/) website collects and presents datasets and
 recipes stemming from Digital Humanities projects.
+</GridItem>
 
+<GridItem>
 ![CESSDA Training](/assets/cms/images/cessdatraining.png)
+</GridItem>
 
+<GridItem>
 The [CESSDA Training Working Group](https://www.cessda.eu/Training), implementing one of the four
 strategic pillars of CESSDA, offers a wide variety of training in Research Data Management and data
 archiving to both researchers and data curators.
+</GridItem>
 
+<GridItem>
 ![CLARIN Resource Families](/assets/cms/images/clarin_families.png)
+</GridItem>
 
+<GridItem>
 The [CLARIN Resource Families](https://www.clarin.eu/resource-families) are a number of curated
 collections of corpora and tools. They are manually put together by CLARIN with the aim to provide a
 user-friendly overview of existing resources within and without the CLARIN infrastructure.
+</GridItem>
 
+<GridItem>
 ![DARIAH-Campus](/assets/cms/images/campus.png)
+</GridItem>
 
+<GridItem>
 [DARIAH-Campus](https://campus.dariah.eu/) is both a discovery framework and a hosting platform for
 DARIAH and DARIAH-affiliated training and education materials.
+</GridItem>
 
+<GridItem>
 ![DARIAH Contribution Tool](/assets/cms/images/ikct.png)
+</GridItem>
 
+<GridItem>
 DARIAH member states contribute to the DARIAH distributed infrastructure with a diverse range of
 resources and services, and declare these in-kind contributions via the
 [DARIAH contribution tool](https://contrib.dariah.eu/). A selected set of these contributions has
 been added to the SSH Open Marketplace.
+</GridItem>
 
+<GridItem>
 ![SSHOC logo](/assets/cms/images/sshoc.png)
+</GridItem>
 
+<GridItem>
 The [SSHOC service catalogue](https://www.sshopencloud.eu/service-catalogue) is the result of all
 SSHOC Work Packages to collect and consolidate the SSHOC services (or resources) offered. Based on
 the progressing implementation of the project, resources referenced in the catalogue are the most
 visible outputs of the SSHOC project.
+</GridItem>
 
+<GridItem>
 ![SSHOC Conversion Hub](/assets/cms/images/conversionhub.png)
+</GridItem>
 
+<GridItem>
 The [SSH Conversion Hub is an outcome of SSHOC WP3](https://doi.org/10.5281/zenodo.5561604). It
 allows users to search for tools that convert from one (meta-)data/file format to another one, e.g.
 from CSV (comma-separated values) to TEI (Text Encoding Initiative). import withHeadingIds from
 'remark-slug'
+</GridItem>
 
+<GridItem>
 ![SSH Training Discovery Toolkit](/assets/cms/images/tdt.png)
+</GridItem>
 
+<GridItem>
 The [SSH Training Discovery Toolkit](https://training-toolkit.sshopencloud.eu) acts as an overview
 on relevant sources that hold (digital) material for trainers. For such sources, selected items are
 described in more detail than is useful for the SSH community and give a hint about what training
 material to expect from the source.
+</GridItem>
 
-</div>
+</Grid>
 
 If you don't see some of these sources in the Marketplace, it is because they are still in the
 process of being ingested. New sources are also regularly added (between 1 to 2 sources per year). As there are some criteria to comply with, please
