--- a/content/about/service/index.mdx
+++ b/content/about/service/index.mdx
@@ -30,8 +30,8 @@ The SSH Open Marketplace is _not_:
 
 Watch the “SSH Open Marketplace - explained the easy way” to understand what the service has to offer!
 
-<Embed src="https://www.youtube-nocookie.com/embed/4tyZ4vhrM9s">
-</Embed>
+<Video provider="youtube" id="4tyZ4vhrM9s">
+</Video>
 
 ## How to use it?
 
