--- a/content/contribute/administrator-guidelines/index.mdx
+++ b/content/contribute/administrator-guidelines/index.mdx
@@ -6,7 +6,7 @@ toc: true
 
 As described in the ["data ingestion workflow" section](/about/implementation#data-ingestion-workflow), the ingestion pipeline covers several steps that should be overseen by an Administrator for every new source to be added to the SSH Open Marketplace.
 
-1. **Suggest a new source to harvest**. A source can be suggested by a Contributor or Moderator via the [contact form](/contact). The decision to include a new source has to be met based on the [source inclusion criteria](/about/data#inclusion-criteria) and on a consensual basis within the Editorial team.
+1. **Suggest a new source to harvest**. A source can be suggested by a Contributor or Moderator via the [contact form](/contact). The decision to include a new source has to be met based on the [source inclusion criteria](/about/data-population#inclusion-criteria) and on a consensual basis within the Editorial team.
 2. **Define mappings**. A mapping from the source data model to the Marketplace data model has to be devised in each case. This mapping is prepared in a spreadsheet by one of the Moderators and reviewed by at least another. This mapping represents the prescription for the custom ingestion pipeline.
 3. **Implement a custom pipeline**. Based on the mapping defined in the previous step, a custom ETL (extract, transform, load) pipeline is implemented, which fetches the data from the source, iteratively processes all the items and maps the structured data in the source format to the MP data model, ingesting the transformed items expressed as JSON-objects via the API of the Marketplace.
 4. **Test ingest and review**. After the mappings are defined, ingestion against a test instance and automatic checks are performed, as the basis for a review of the quality of the mapping. Identified problems inform refining of the mappings in an iterative process, until the test ingest passes the review (by the Editorial team). This work is handled by the assigned Moderator in cooperation with the Administrators. Note: in this stage, the checks are performed, but no curation or editing of the data is performed, only adjustments to the mapping.
