fix URLs in vocab table
adding URLs to vocabularies table

--- a/content/contribute/metadata-guidelines/index.mdx
+++ b/content/contribute/metadata-guidelines/index.mdx
@@ -306,10 +306,10 @@ The first subsection presents the fields that are mandatory and recommended depe
 | intended-audience          | [audience](https://vocabs.sshopencloud.eu/vocabularies/sshoc-audience/audienceScheme)                                                                | closed             |
 | mode-of-use                | [Invocation types](https://vocabs.sshopencloud.eu/vocabularies/invocation-type/invocationTypeScheme)                                                 | closed             |
 | language                   | [ISO 639-3 Language Codes](https://vocabs.acdh.oeaw.ac.at/iso639_3/)                                                                                 | closed             |
-| keyword                    | Keywords from SSHOC MP                                                                                                                               | open               |
+| keyword                    | [Keywords from SSHOC MP](https://vocabs.sshopencloud.eu/vocabularies/sshomp-keyword/)                                                                                                                               | open               |
 | object-format              | [Media Types from IANA](https://vocabs.sshopencloud.eu/vocabularies/media-type/mediaTypeScheme)                                                      | closed             |
 | discipline                 | [ÖFOS 2012. Austrian Fields of Science and Technology Classification 2012](https://vocabs.acdh.oeaw.ac.at/oefos/de/page/Schema)                      | closed             |
-| license                    | [Software License from SPDX](https://vocabs.sshopencloud.eu/vocabularies/software-license/en/)                                                       | closed             |
+| license                    | [Software License from SPDX](https://vocabs.sshopencloud.eu/browse/software-license/en/)                                                       | closed             |
 | standard                   | [SSK Standards List](https://vocabs.sshopencloud.eu/vocabularies/standard/standardScheme)                                                            | closed             |
 | activity                   | [TaDiRAH 2](https://vocabs.dariah.eu/tadirah/)                                                                                                       | closed             |
-| publication-type           | [The Bibliographic Ontology Concept Scheme](https://vocabs.sshopencloud.eu/vocabularies/publication-type/en/)                                        | closed             |
+| publication-type           | [The Bibliographic Ontology Concept Scheme](https://vocabs.sshopencloud.eu/browse/publication-type/en/)                                        | closed             |
