--- a/content/about/team/index.mdx
+++ b/content/about/team/index.mdx
@@ -4,39 +4,30 @@ toc: false
 ---
 The SSH Open Marketplace was created with funding from the [SSHOC project](/about/sshoc-eosc). After the end of the project, 3 ERICs and some of their national nodes decided to ensure the sustainability of the SSH Open Marketplace, under the umbrella of the SSH Open Cluster. They act as a **Governing Board** for the SSH Open Marketplace and define the Marketplace strategic policy with regards to scientific, technical and managerial matters.
 
+<Grid layout="three-columns" alignment="stretch">
+  <GridItem alignment="stretch">
+    <Figure src="/assets/content/images/about/team/logo-dariah-eu.png" alignment="stretch">
+      [DARIAH](https://dariah.eu)
+    </Figure>
+  </GridItem>
 
-<Grid layout="three-columns">
+  <GridItem alignment="stretch">
+    <Figure src="/assets/content/images/about/team/logo-cessda.png" alignment="stretch">
+      [CESSDA](https://www.cessda.eu)
+    </Figure>
+  </GridItem>
 
-<GridItem>
-
-<Figure src="/assets/content/images/about/team/logo-dariah-eu.png" alignment="stretch">
-[DARIAH](https://dariah.eu)
-</Figure>
-
-</GridItem>
-
-<GridItem>
-
-<Figure src="/assets/content/images/about/team/logo-cessda.png" alignment="stretch">
-[CESSDA](https://www.cessda.eu)
-</Figure>
-
-</GridItem>
-
-<GridItem>
-
-<Figure src="/assets/content/images/about/team/logo-clarin.png" alignment="stretch">
-[CLARIN](https://clarin.eu)
-</Figure>
-
-</GridItem>
-
+  <GridItem alignment="stretch">
+    <Figure src="/assets/content/images/about/team/logo-clarin.png" alignment="stretch">
+      [CLARIN](https://clarin.eu)
+    </Figure>
+  </GridItem>
 </Grid>
 
 Two institutions act as service providers on behalf of these ERICs:
 
-- the [Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)](https://www.oeaw.ac.at/acdh/) of the Austrian Academy of Sciences providing hosting and maintenance for the service. Especially, Matej Ďurčo coordinates efforts from the ACDH-CH team where Stefan Probst acts as front-end developer and Dalibor Pančić takes care of the Marketplace deployment.
-- and the P[oznan Supercomputing and Networking Center (PSNC)](https://www.psnc.pl/) affiliated to the Institute of Bioorganic Chemistry of the Polish Academy of Sciences providing the data ingestion pipeline as well as maintenance for the service. Tomasz Parkoła and Aleksandra Nowak are particularly involved, respectively in the maintenance of the back-end code and as lead developer of the DACE ingestion pipeline [see ingest workflow](/about/implementation#data-ingestion-workflow).
+* the [Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)](https://www.oeaw.ac.at/acdh/) of the Austrian Academy of Sciences providing hosting and maintenance for the service. Especially, Matej Ďurčo coordinates efforts from the ACDH-CH team where Stefan Probst acts as front-end developer and Dalibor Pančić takes care of the Marketplace deployment.
+* and the P[oznan Supercomputing and Networking Center (PSNC)](https://www.psnc.pl/) affiliated to the Institute of Bioorganic Chemistry of the Polish Academy of Sciences providing the data ingestion pipeline as well as maintenance for the service. Tomasz Parkoła and Aleksandra Nowak are particularly involved, respectively in the maintenance of the back-end code and as lead developer of the DACE ingestion pipeline [see ingest workflow](/about/implementation#data-ingestion-workflow).
 
 ## Editorial team
 
@@ -44,205 +35,152 @@ An **Editorial Team** ensures the day-to-day maintenance and the data quality of
 
 The Editorial Team is composed of the following members (8 members appointed by the Governing Board and volunteers who joined the team after a call launched mid-2022):
 
-<Grid layout="one-four-columns">
+<Grid layout="one-four-columns" alignment="stretch">
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/barbot-laure.jpg">
 
-<GridItem>
+    </Avatar>
+  </GridItem>
 
-<Avatar src="/assets/content/images/about/team/arikan-caba-canan.png">
-</Avatar>
+  <GridItem alignment="stretch">
+    **Laure Barbot** is officer for service development and integration at the Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU). She coordinates the SSH Open Marketplace Editorial Team, and is involved in various EU projects connected to the SSH Open Cluster.
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/battaner-moro-elena.png">
 
-<GridItem>
+    </Avatar>
+  </GridItem>
 
-**Canan Arıkan-Caba** is a Research Infrastructure Officer in the Research Unit [DH Research & Infrastructure](https://www.oeaw.ac.at/acdh/research/dh-research-infrastructure) at the Austrian Center for Digital Humanities and Cultural Heritage and a Phd candidate in Byzantine and Modern Greek Studies at the University of Vienna. Canan joined the SSH Open Marketplace Editorial Board in 2024 and is part also of the curation team, where she works on enhancing the metadata quality of the items. Furthermore, she is involved in the project [ATRIUM](https://atrium-research.eu/) (Advancing fronTier Research In the arts and hUManities) for which she brings her academic experience in archaeological and textual data and works in semantic interoperability and Metadata Harmonisation and enrichment WPs in which SSH Marketplace has the crucial role as the main discovery platform.
+  <GridItem alignment="stretch">
+    [**Elena Battaner Moro**](https://orcid.org/0000-0002-5521-6445) is Professor in Linguistics at the Universidad Rey Juan Carlos in Madrid, Spain. With a strong commitment to Open Science, Elena is also a member of the RDA and CLARIAH-ES (Spain). Joining the SSH Open Marketplace Editorial Team is an opportunity for her to consolidate the vocabularies and taxonomies related to the different subjects and activities of CESSDA, DARIAH and CLARIN, as well as the possibility to contribute to the training and information about research infrastructures.
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/buddenbohm-stefan.jpg">
 
-<GridItem>
+    </Avatar>
+  </GridItem>
 
-<Avatar src="/assets/content/images/about/team/barbot-laure.jpg">
-</Avatar>
+  <GridItem alignment="stretch">
+    [**Stefan Buddenbohm**](https://www.sub.uni-goettingen.de/kontakt/personen-a-z/personendetails/person/stefan-buddenbohm-1/) works as project manager in the Research and Development Department at the Göttingen State and University Library, in Germany. Already involved in the development of the SSH Open Marketplace via the SSHOC project, Stefan joins the Editorial Team with an interest to enhance the uptake and awareness of the SSH Open Marketplace in the German research community. Stefan builds the bridge to the German NFDI - the National Research Data Infrastructure - a joint effort of up to 30 disciplinary consortia. Currently he’s coordinating the task area Infrastructure/Operations of  Text+, the NFDI research data infrastructure for text- and language based research data.
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
 
-<GridItem>
+  </GridItem>
 
-**Laure Barbot** is officer for service development and integration at the Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU). She coordinates the SSH Open Marketplace Editorial Team, and is involved in various EU projects connected to the SSH Open Cluster.
+  <GridItem alignment="stretch">
+    **Cesare Concordia** - Institute of Information Science and Technologies "Alessandro Faedo" (CNR-ISTI)
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
 
-<GridItem>
+  </GridItem>
 
-<Avatar src="/assets/content/images/about/team/battaner-moro-elena.png">
-</Avatar>
+  <GridItem alignment="stretch">
+    **Edward Gray** - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU)
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/grisot-cristina.jpg">
 
-<GridItem>
+    </Avatar>
+  </GridItem>
 
-**[Elena Battaner Moro](https://orcid.org/0000-0002-5521-6445)** is Professor in Linguistics at the Universidad Rey Juan Carlos in Madrid, Spain. With a strong commitment to Open Science, Elena is also a member of the RDA and CLARIAH-ES (Spain). Joining the SSH Open Marketplace Editorial Team is an opportunity for her to consolidate the vocabularies and taxonomies related to the different subjects and activities of CESSDA, DARIAH and CLARIN, as well as the possibility to contribute to the training and information about research infrastructures.
+  <GridItem alignment="stretch">
+    [**Cristina Grisot**](https://cristinagrisot.com/) is a researcher in Language Sciences and Project Manager, and she currently works as national coordinator of the Swiss nodes of CLARIN and DARIAH at the University of Zurich and at the Swiss National Center for Data & Services for the Humanities DaSCH. As a member of the SSHOM EB, Cristina is interested in contributing to the (meta)data quality of humanities and language-related resources, creation of workflows, as well as dissemination and community building around the SSH Open Marketplace. ORCID [0000-0003-0684-4442](https://orcid.org/0000-0003-0684-4442). [LinkedIn](https://www.linkedin.com/in/cristinagrisot/)
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
 
-<GridItem>
+  </GridItem>
 
-<Avatar src="/assets/content/images/about/team/buddenbohm-stefan.jpg">
-</Avatar>
+  <GridItem alignment="stretch">
+    **Alexander König** - Common Language Resources and Technology Infrastructure (CLARIN ERIC)
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/kurzmeier-michael.png">
 
-<GridItem>
+    </Avatar>
+  </GridItem>
 
-**[Stefan Buddenbohm](https://www.sub.uni-goettingen.de/kontakt/personen-a-z/personendetails/person/stefan-buddenbohm-1/)** works as project manager in the Research and Development Department at the Göttingen State and University Library, in Germany. Already involved in the development of the SSH Open Marketplace via the SSHOC project, Stefan joins the Editorial Team with an interest to enhance the uptake and awareness of the SSH Open Marketplace in the German research community. Stefan builds the bridge to the German NFDI - the National Research Data Infrastructure - a joint effort of up to 30 disciplinary consortia. Currently he’s coordinating the task area Infrastructure/Operations of  Text+, the NFDI research data infrastructure for text- and language based research data.
+  <GridItem alignment="stretch">
+    [**Michael Kurzmeier**](https://www.mkrzmr.com/) is Research Infrastructure Officer at the Austrian Centre for Digital Humanities and Cultural Heritage. Michael has been active in the development of research infrastructures through the [WARCnet](https://cc.au.dk/en/warcnet/) research network as well as the [C21: Editing and Publishing in the Digital Age](https://www.c21editions.org/) research project.
+    At the ACDH-CH, Michael is part of the research unit [DH Research & Infrastructure](https://www.oeaw.ac.at/acdh/research/dh-research-infrastructure). He is currently working for the EU funded H2020 project [EOSC Future](https://eoscfuture.eu/) building up the European Open Science Cloud. Michael chairs the Working Group on Digital Methods for WARCnet, contributing to methodological developments in digital tools for research. Notably, he has provided a comprehensive database of defaced websites for academic use and serves as the Chair for Community Engagement in Dariah.
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/mcgillivray-barbara.png">
 
-<GridItem>
+    </Avatar>
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    **Barbara McGillivray** is Lecturer Digital Humanities and Cultural Computation at the Department of Digital Humanities of King's College London and Editor-in-chief of the [Journal of Open Humanities Data (JOHD)](https://openhumanitiesdata.metajnl.com/). Barbara is bringing her expertise in interdisciplinary research at the intersection between humanities and computational sciences, with a particular focus on language data to the SSH Open Marketplace. And great synergies between the Journal of Open Humanities Data and the SSH Open Marketplace will also be on the agenda! [ORCID profile](https://orcid.org/0000-0003-3426-8200)
+  </GridItem>
 
-<GridItem>
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/boavida-clara.jpg">
 
-**Cesare Concordia** - Institute of Information Science and Technologies "Alessandro Faedo" (CNR-ISTI)
+    </Avatar>
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    [**Clara Parente Boavida**](https://orcid.org/0000-0002-4837-6395) works at the Research Support Office at Iscte-Instituto Universitário de Lisboa, in Portugal, focusing particularly on open research issues, research data management, data stewardship, post award activities and bibliometric indicator studies. Clara joins the SSH Open Marketplace Editorial Board team to contribute to the enrichment of content and dissemination of the service and is also bringing her experience in reusing training materials provided by Research Infrastructures.
+  </GridItem>
 
-<GridItem>
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/wnuk-magdalena.png">
 
-<Avatar src="/assets/content/images/about/team/dolinar-maja.jpg">
-</Avatar>
+    </Avatar>
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    [**Magdalena Wnuk**](https://orcid.org/0000-0003-4129-6664) is Open Science Specialist at The Institute of Literary Research of the Polish Academy of Sciences, Digital Humanities Centre. She is also coordinating the Polish national node for the OPERAS infrastructure.  By joining the SSH Open Marketplace Editorial Board, Magdalena would like to continue communicating the available tools among various audiences as well as contributing to metadata quality improvement in social sciences and humanities.
+  </GridItem>
 
-<GridItem>
+  <GridItem alignment="stretch">
 
-**[Maja Dolinar](https://orcid.org/0000-0002-8307-6486)** is Head of Digital Preservation at the Slovenian Social Science Data Archives at the University of Ljubljana, in Slovenia. Maja has an extensive expertise in quality evaluation of resources and an everyday experience in metadata and managing social science research data. Motivated to share her experiences, learn from other members of the Board and contribute to improving and disseminating the SSH Open Marketplace resources, Maja will also pay particular attention to the early career researchers’ needs towards the service.
+  </GridItem>
 
-</GridItem>
+  <GridItem alignment="stretch">
+    **Irena Vipavc Brvar** - CESSDA & Slovenian Social Science Data Archives (ADP), University of Ljubljana
+  </GridItem>
 
-<GridItem>
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/joan-murphy-headshot.jpeg">
 
-</GridItem>
+    </Avatar>
+  </GridItem>
 
-<GridItem>
+  <GridItem alignment="stretch">
+    **Joan Murphy** is National Manager for DARIAH-IE, and co-chairs the RDA's Collections as Data IG and DARIAH's Community Engagement WG. An information professional with over 30 years' experience in digital libraries and archives with a focus on interoperability, standards, and workflows across research domains, she has a particular interest in cultural heritage and FAIR & CARE research data. Alongside library and project management qualifications she holds two first-class masters degrees - an MSc in Information Management from TUD and an MA in Digital Arts and Humanities from UCC. She is passionate about metadata.
+  </GridItem>
 
-**Edward Gray** - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU)
+  <GridItem alignment="stretch">
+    <Avatar src="/assets/content/images/about/team/alexander-steckel.jpg">
 
-</GridItem>
+    </Avatar>
+  </GridItem>
 
-<GridItem>
+  <GridItem alignment="stretch">
+    [Alexander Steckel](https://www.sub.uni-goettingen.de/kontakt/personen-a-z/personendetails/person/alexander-steckel/) is a communications officer at the Research and Development Department at Göttingen State and University Library. Crossing the tools of the trade of RDM and outreach specialist, he is interested in providing well curated pathways for quality metadata in humanities’ and language resources and building communities of users around them. He hails the SSH Open Marketplace from a user’s perspective: Heading the website team for German NFDI consortium [Text+](https://text-plus.org/en/), he uses API harvested resources for their complete service and training materials portfolio.
+  </GridItem>
 
-<Avatar src="/assets/content/images/about/team/grisot-cristina.jpg">
-</Avatar>
+  <GridItem alignment="stretch">
 
-</GridItem>
+  </GridItem>
 
-<GridItem>
+  <GridItem alignment="stretch">
 
-**[Cristina Grisot](https://cristinagrisot.com/)** is a researcher in Language Sciences and Project Manager, and she currently works as national coordinator of the Swiss nodes of CLARIN and DARIAH at the University of Zurich and at the Swiss National Center for Data & Services for the Humanities DaSCH. As a member of the SSHOM EB, Cristina is interested in contributing to the (meta)data quality of humanities and language-related resources, creation of workflows, as well as dissemination and community building around the SSH Open Marketplace. ORCID [0000-0003-0684-4442](https://orcid.org/0000-0003-0684-4442). [LinkedIn](https://www.linkedin.com/in/cristinagrisot/)
-
-</GridItem>
-
-<GridItem>
-
-</GridItem>
-
-<GridItem>
-
-**Klaus Illmayer** - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)
-
-</GridItem>
-
-<GridItem>
-
-</GridItem>
-
-<GridItem>
-
-**Alexander König** - Common Language Resources and Technology Infrastructure (CLARIN ERIC)
-
-</GridItem>
-
-<GridItem>
-
-<Avatar src="/assets/content/images/about/team/kurzmeier-michael.png">
-</Avatar>
-
-</GridItem>
-
-<GridItem>
-
-**[Michael Kurzmeier](https://www.mkrzmr.com/)** is Research Infrastructure Officer at the Austrian Centre for Digital Humanities and Cultural Heritage. Michael has been active in the development of research infrastructures through the [WARCnet](https://cc.au.dk/en/warcnet/) research network as well as the [C21: Editing and Publishing in the Digital Age](https://www.c21editions.org/) research project.
-At the ACDH-CH, Michael is part of the research unit [DH Research & Infrastructure](https://www.oeaw.ac.at/acdh/research/dh-research-infrastructure). He is currently working for the EU funded H2020 project [EOSC Future](https://eoscfuture.eu/) building up the European Open Science Cloud. Michael chairs the Working Group on Digital Methods for WARCnet, contributing to methodological developments in digital tools for research. Notably, he has provided a comprehensive database of defaced websites for academic use and serves as the Chair for Community Engagement in Dariah.
-
-</GridItem>
-
-<GridItem>
-
-<Avatar src="/assets/content/images/about/team/mcgillivray-barbara.png">
-</Avatar>
-
-</GridItem>
-
-<GridItem>
-
-**Barbara McGillivray** is Lecturer Digital Humanities and Cultural Computation at the Department of Digital Humanities of King's College London and Editor-in-chief of the [Journal of Open Humanities Data (JOHD)](https://openhumanitiesdata.metajnl.com/). Barbara is bringing her expertise in interdisciplinary research at the intersection between humanities and computational sciences, with a particular focus on language data to the SSH Open Marketplace. And great synergies between the Journal of Open Humanities Data and the SSH Open Marketplace will also be on the agenda! [ORCID profile](https://orcid.org/0000-0003-3426-8200)
-
-</GridItem>
-
-<GridItem>
-
-<Avatar src="/assets/content/images/about/team/boavida-clara.jpg">
-</Avatar>
-
-</GridItem>
-
-<GridItem>
-
-**[Clara Parente Boavida](https://orcid.org/0000-0002-4837-6395)** works at the Research Support Office at Iscte-Instituto Universitário de Lisboa, in Portugal, focusing particularly on open research issues, research data management, data stewardship, post award activities and bibliometric indicator studies. Clara joins the SSH Open Marketplace Editorial Board team to contribute to the enrichment of content and dissemination of the service and is also bringing her experience in reusing training materials provided by Research Infrastructures.
-
-</GridItem>
-
-<GridItem>
-
-<Avatar src="/assets/content/images/about/team/schuster-christian.png">
-</Avatar>
-
-</GridItem>
-
-<GridItem>
-
-**[Christian Schuster](https://orcid.org/0000-0002-5851-5643)** is the Director of the Transylvania Digital Humanities Centre (DigiHUBB) at the Babeș-Bolyai University Cluj-Napoca, in Romania. Christian brings his experience in interdisciplinary studies and his expertise in (meta)data curation to the SSH Open Marketplace Editorial Board.
-
-</GridItem>
-
-<GridItem>
-
-<Avatar src="/assets/content/images/about/team/wnuk-magdalena.png">
-</Avatar>
-
-</GridItem>
-
-<GridItem>
-
-**[Magdalena Wnuk](https://orcid.org/0000-0003-4129-6664)** is Open Science Specialist at The Institute of Literary Research of the Polish Academy of Sciences, Digital Humanities Centre. She is also coordinating the Polish national node for the OPERAS infrastructure.  By joining the SSH Open Marketplace Editorial Board, Magdalena would like to continue communicating the available tools among various audiences as well as contributing to metadata quality improvement in social sciences and humanities.
-
-</GridItem>
-
-<GridItem>
-
-</GridItem>
-
-<GridItem>
-
-**Irena Vipavc Brvar** - CESSDA & Slovenian Social Science Data Archives (ADP), University of Ljubljana
-
-</GridItem>
-
+  </GridItem>
 </Grid>
 
-Former members of the Editorial Board: Mari Kleemola (CESSDA/FSD), Taina Jääskeläinen (CESSDA/FSD), Martin Kirnbauer (ACDH-CH)
+Former members of the Editorial Board: Mari Kleemola (CESSDA/FSD), Taina Jääskeläinen (CESSDA/FSD), Martin Kirnbauer (ACDH-CH), Canan Arıkan-Caba, Maja Dolinar, Klaus Illmayer, Christian Schuster.
+
+We remember **Cesare Concordia,** Editorial Board member and colleague.
 
 Please use the [contact form](/contact) if you want to get in touch.
 
